tree_sitter_v/grammar.js
    source_file: ($) =>
      seq(
        optional($.module_clause),
        optional($.import_list),
        repeat(
          choice(
            seq($._top_level_declaration, optional(semi)),
            seq($._statement, optional(semi)),
          ),
        ),
      ),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    comment: ($) => $._comment,

    _top_level_declaration: ($) =>
      choice(
        $.const_declaration,
        $.global_var_declaration,
        $.type_declaration,
        $.function_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.interface_declaration,
      ),

    // TODO: нужны ли нам тут атрибуты?
    function_declaration: ($) => prec.right(PREC.resolve,
      seq(
        field('attributes', optional($.attributes)),
        optional($.visibility_modifiers),
        'fn',
        field('receiver', optional($.receiver)),
        field('name', $._function_name),
        field('generic_parameters', optional($.generic_parameters)),
        field('signature', $.signature),
        field('body', optional($.block))
      )),

    _function_name: ($) => choice($.binded_identifier, $.identifier, $.overloadable_operator),

    signature: ($) => prec.right(seq(
      field(
        'parameters',
        choice($.parameter_list, $.type_only_parameter_list)
      ),
      field('result', optional($._type)),
    )),

    parameter_list: ($) =>
      prec(PREC.resolve, seq("(", comma_sep($.parameter_declaration), ")")),

    parameter_declaration: ($) =>
      seq(
        field('mutability', optional($.mutability_modifiers)),
        field("name", $.identifier),
        optional(field("variadic", "...")),
        field("type", choice($.plain_type, $.option_type))
      ),

    generic_parameters: ($) =>
      prec(
        PREC.resolve,
        seq(
          choice(token.immediate('['), token.immediate('<')),
          comma_sep1($.generic_parameter),
          optional(','),
          choice(']', '>'),
        )
      ),

    generic_parameter: ($) => $.identifier,


    embedded_definition: ($) => prec.right(PREC.unary, $.plain_type),


    interface_declaration: ($) =>
      seq(
        field('attributes', optional($.attributes)),
        optional($.visibility_modifiers),
        'interface',
        field('name', choice($.identifier, $.binded_identifier)),
        field('generic_parameters', optional($.generic_parameters)),
        $._interface_body,
      ),

    _interface_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            seq($.struct_field_scope, optional(terminator)),
            seq($.struct_field_declaration, optional(terminator)),
            seq($.interface_method_definition, optional(terminator)),
          ),
        ),
        '}'
      ),

    interface_method_definition: ($) =>
      prec.right(
        seq(
          field('name', $.identifier),
          field('generic_parameters', optional($.generic_parameters)),
          field('signature', $.signature),
          field('attributes', optional($.attribute)),
        )
      ),


    _expression: ($) =>
      choice(
        $.parenthesized_expression,
        $.call_expression,
        $.type_initializer,
        $.function_literal,
        $.empty_literal_value,
        $.binded_identifier,
        $.reference_expression,
        $._max_group,
        $.map_init_expression,
        $.array_creation,
        $.empty_array_creation,
        $.fixed_array_creation,
        $.unary_expression,
        $.binary_expression,
        $.is_expression,
        $.not_is_expression,
        $.index_expression,
        $.slice_expression,
        // $.type_cast_expression,
        $.as_type_cast_expression,
        $.selector_expression,
        $._expression_with_blocks,
        $.enum_fetch,
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    call_expression: ($) => prec.right(PREC.primary, choice(
      seq(
        field('function', token.immediate('json.decode')),
        field('arguments', $.special_argument_list),
        optional($.error_propagate),
      ),
      seq(
        field('name', $._expression),
        field('type_parameters', optional($.type_parameters)),
        field('arguments', $.argument_list),
        optional($.error_propagate),
      )
    )),

    argument_list: ($) => seq(
      '(',
      optional(seq(
        choice($.argument),
        repeat(seq(list_separator, choice($.argument))),
        optional(list_separator)
      )),
      ')'
    ),

    reference_expression: ($) => prec(PREC.primary, $.identifier),
    type_reference_expression: ($) => prec(PREC.primary, $.identifier),

    or_block: ($) => seq("or", $.block),

    literal: ($) => choice(
      $.int_literal,
      $.float_literal,
      $._string_literal,
      $.rune_literal,
      $.none,
      $.true,
      $.false,
      $.nil,
    ),

    true: ($) => 'true',
    false: ($) => 'false',
    array_creation: ($) => prec.right(PREC.multiplicative, $._non_empty_array),

    _non_empty_array: ($) =>
      seq("[", repeat1(seq($._expression, optional(","))), "]"),

    int_literal: ($) => token(int_literal),

    _string_literal: ($) =>
      choice(
        $.c_string_literal,
        $.raw_string_literal,
        $.interpreted_string_literal
      ),

    identifier: ($) =>
      token(
        seq(
          optional('@'),
          choice(unicode_letter, "_"),
          repeat(choice(letter, unicode_digit))
        ),
      ),

    // Some of the syntaxes in V are restricted
    // to be in a single line. That's why an identifier
    // immediate token is created to solve this concern.
    visibility_modifiers: ($) =>
        prec.left(
            choice(
                'pub',
                '__global',
            )
        ),

    expression_list: ($) =>
      prec(PREC.resolve, comma_sep1(choice($._expression, $.mutable_expression))),

    // TODO: any expression on the right that is recognized
    // as external tokens will be deduced as separate nodes
    // instead of having under the same expression_list node
    _expression_list_repeat1: ($) =>
      seq(
        choice(
          $._expression,
          $.mutable_expression
        ),
        repeat1(
          seq(
            ",",
            choice(
              $._expression,
              $.mutable_expression
            )
          )
        )
      ),

    empty_literal_value: ($) => prec(PREC.composite_literal, seq("{", "}")),

    _type: ($) => choice($.plain_type, $.option_type, $.result_type, $.multi_return_type),

    option_type: ($) =>
      prec.right(
        seq("?", optional($._type))
      ),

    plain_type: ($) =>
      prec.right(PREC.primary,
        choice(
          $.type_reference_expression,
          // $.builtin_type,
          $._binded_type,
          $.qualified_type,
          $.pointer_type,
          $.array_type,
          $.fixed_array_type,
          $.function_type,
          $.generic_type,
          $.map_type,
          $.channel_type,
          $.shared_type,
          $.thread_type,
          $.none_type,
        ),
      ),

    _binded_type: ($) => prec.right(alias($.binded_identifier, $.binded_type)),

    _statement_list: ($) =>
      repeat1(seq(
        $._statement,
        optional($._automatic_separator)
      )),

    _statement: ($) =>
      choice(
        $.simple_statement,
        $.assert_statement,
        $.continue_statement,
        $.break_statement,
        $.return_statement,
        $.asm_statement,
        $.go_statement,
        $.spawn_statement,
        $.goto_statement,
        $.labeled_statement,
        $.defer_statement,
        $.for_statement,
        $.compile_time_for_statement,
        $.send_statement,
        $.block,
        $.hash_statement
      ),

    simple_statement: ($) =>
      choice(
        $.var_declaration,
        $._expression,
        $.inc_statement,
        $.dec_statement,
        $.assignment_statement,
      ),

    var_declaration: ($) =>
      prec.right(
          seq(
              field("var_list", $.expression_list),
              ":=",
              field("expression_list", $.expression_list)
          )
      ),

    block: ($) =>
      seq(
        "{",
        optional(choice(
          $._statement_list,
          alias($._expression_list_repeat1, $.expression_list),
          alias($.empty_labeled_statement, $.labeled_statement),
          seq(
            $._statement_list,
            choice(
              alias($._expression_list_repeat1, $.expression_list),
              alias($.empty_labeled_statement, $.labeled_statement)
            )
          )
        )),
        "}"
      ),

    return_statement: ($) =>
      prec.right(seq('return', optional(field("expression_list", $.expression_list)))),

    index_expression: ($) =>
      prec.right(
        PREC.primary,
        seq(
          field("operand", $._expression),
          "[",
          field("index", $._expression),
          "]",
          optional($.error_propagate)
        )
      ),

    compile_time_if_expression: ($) =>
      seq(
        "$" + 'if',
        field(
          "condition",
          seq($._expression, optional("?"))
        ),
        field("consequence", $.block),
        optional(
          seq(
            "$else",
            field(
              "alternative",
              choice(
                $.block,
                $.compile_time_if_expression
              )
            )
          )
        )
      ),

    if_expression: ($) =>
      seq(
        'if',
        choice(
          field("condition", $._expression),
          field("guard", $.var_declaration)
        ),
        field("block", $.block),
        optional(
          seq(
            'else',
            field("else_branch", choice($.block, $.if_expression))
          )
        )
      ),

    attributes: ($) =>
        repeat1(seq($.attribute, optional(terminator))),

    attribute: ($) =>
        seq("[", seq($.attribute_expression, repeat(seq(";", $.attribute_expression))), "]"),

    attribute_expression: ($) =>
      prec(
        PREC.attributes,
        choice(
          $.if_attribute,
          $._plain_attribute,
        )
      ),

    // [if some ?]
    _plain_attribute: ($) => choice(
        $.literal_attribute,
        $.value_attribute,
        $.key_value_attribute
    ),

    // ['/query']
    value_attribute: ($) => prec(
        PREC.attributes,
        field("name", choice(alias("unsafe", $.type_reference_expression), $.type_reference_expression)),
    ),

    // [key]
    // [key: value]
