tree_sitter_v/test/corpus/if_expression_var.txt
===
If Expression var declaration
===

fn main() {
  if foo := opt_fn() {
    // do something
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (if_expression
        (var_declaration
          (expression_list (identifier))
          (expression_list 
            (call_expression
              (identifier)
              (argument_list))))
        (block (comment))))))
